# project_tutorial

./: Pipfile  README.md  Readme.md  app_core.py  main.py  requirements.txt
controllers/: climate.py  updatePhoto.py
e_shopping_website/: Selenium Prepare.ipynb  manage.py  pyproject.toml  scraper.py
e_shopping_website/clothes/: admin.py  apps.py  models.py  scraper.py  scraper_shuting.py
e_shopping_website/clothes/migrations/: 0001_initial.py
e_shopping_website/clothes/views/: views.py
e_shopping_website/config/: base_setting.py  config-miustar.json  config.json  default_setting.yaml  system_setting.py
e_shopping_website/scrapers/: GENQUO.ipynb  MEIER_Q.ipynb  MIUSTAR.ipynb  Mercci22.ipynb  PAZZO.ipynb  東京著衣.ipynb
e_shopping_website/shop/: asgi.py  settings.py  urls.py  wsgi.py
e_shopping_website/templates/: home.html
e_shopping_website/toolbox/: chrome_driver.py
hang-out/templates/: flexmsg_g.py  flexmsg_r.py
hang_out/: Procfile  app_core.py  requirements.txt
hang_out/controllers/: basic_info.py  climate.py  edit.py  new_activity.py  new_page.py  record.py  (+5 more)
how_convenient_is_here/: .gitignore  Pipfile  README.md  convenienceEvaluation.py  main.py  requirements.txt
models/: CallDatabase.py  create_table.py
music_game/: README.md  gen_song.py  main.py  rule.txt  song.py  song_config.json  song_play.py  theme.py  trainee_soruce_code.py
politician_analysis/: Pipfile  Politician_Analysis_notebook.ipynb  scraper.py
swear_price/: LICENSE  Makefile  Pipfile  README.md  setup.py
templates/: flexmsg_climate.py  flexmsg_glist.py  flexmsg_rlist.py
(+23 files in other folders)
