[tool.poetry]
name = "e_shopping_website"
version = "0.1.0"
description = "for e_shopping_website"
authors = ["Seraphine"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
